<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyGym</string>
    <string name="gym_address">Пр-кт Стачки 199, 4 этаж</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text1">Your favorite gym</string>
    <string name="splash_text2">Smart fitness</string>
    <string name="fitness">Fitness</string>
    <string name="boxing">Boxing</string>
    <string name="powerlifting">Powerlifting</string>
    <string name="about_gym">Фитнес-клубы Alex Fitness — это комфортные тренажерные залы с европейским оборудованием последнего поколения, большой выбор групповых программ для взрослых и детей и квалифицированный тренерский состав. Мы делаем качественный фитнес доступным для всех, потому что хотим, чтобы каждый мог заниматься спортом и становиться здоровее с каждым днем.

Становитесь лучшей версией себя вместе с Alex Fitness!</string>
    <string name="gym_working_hous" tools:ignore="TypographyDashes">Пн-Вс: 07:00 - 23:00</string>
    <string name="gym_table">Расписание</string>
    <string name="gym_team">Инструкторы</string>
    <string name="send_email">Напишите нам на почту</string>
    <string name="home_item_text">Главная страница</string>
    <string name="team_item_text">Инструкторы</string>
    <string name="abot_gym_item_text">О клубе</string>
    <string name="rules_item_text">Правила посещения</string>
    <string name="about_app_item_text">О приложении</string>
    <string name="feedback_item_text">Обратная связь</string>
    <string name="personal_area_text">Личный кабинет</string>
    <string name="get_sms_code_text_btn">получить sms-код</string>
    <string name="verify_sms_code_text_btn">Подтвердить код</string>
    <string name="auth_text">Для доступа к разделу введите номер телефона. Вам будет выслан SMS-код для входа.</string>
    <string name="accept_text">Ознакомлен с правилами, согласен на обработку персональных данных</string>
    <string name="phone_hint">(900)–000 0000</string>
    <string name="otp_hint">123456</string>
    <string name="ru_region_phone_number">+7</string>
</resources>