<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/startFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home_item_text"
            android:checked="true" />
        <item
            android:id="@+id/personalAreaFragment"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/personal_area_text"/>
        <item
            android:id="@+id/authFragment"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/personal_area_text"/>
        <item
            android:id="@+id/teamFragment2"
            android:icon="@drawable/ic_account_group_outline"
            android:title="@string/team_item_text" />
        <item
            android:id="@+id/aboutGymFragment"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/abot_gym_item_text" />
        <item
            android:id="@+id/rulesFragment"
            android:icon="@drawable/ic_baseline_rule_24"
            android:title="@string/rules_item_text" />
    </group>

    <group
        android:id="@+id/group_second"
        android:checkableBehavior="single">
        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about_app_item_text" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback_item_text" />
    </group>

</menu>