<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_medium_dark"
    tools:context=".screen.aboutgym.AboutGymFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imageViewPager"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/black"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPager" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:layout_constraintTop_toBottomOf="@+id/indicator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/gymName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingHorizontal="16dp"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/gymAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gym_address"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:paddingHorizontal="16dp"
                    android:layout_marginVertical="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"/>

            </LinearLayout>

            <Button
                android:id="@+id/shareButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/ic_baseline_share_24"
                app:layout_constraintBaseline_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/indicator" />

            <Button
                android:id="@+id/phoneButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_phone"
                app:layout_constraintBottom_toBottomOf="@+id/shareButton"
                app:layout_constraintEnd_toStartOf="@+id/shareButton" />

            <TextView
                android:id="@+id/gymDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_gym"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/itemListLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gymDescription">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_clock_time_five_outline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gym_working_hous"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tableLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_file_table_box_outline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gym_table"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/teamLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_account_group_outline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gym_team"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/ic_email_edit_outline" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/send_email"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toTopOf="@+id/socialMediaTextView" />

            <TextView
                android:id="@+id/socialMediaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="Мы в социальных сетях"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/goToVkButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/goToInstButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="360dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_instagram_seeklogo_com"
                app:layout_constraintEnd_toStartOf="@+id/goToVkButton"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <Button
                android:id="@+id/goToVkButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_vk_svgrepo_com"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/goToInstButton" />

            <Button
                android:id="@+id/goToWebsiteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/ic_internet_svgrepo_com"
                app:layout_constraintStart_toEndOf="@+id/goToVkButton"
                app:layout_constraintTop_toTopOf="@+id/goToInstButton" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/goToInstButton" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="280dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gymDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>